# swagger.yaml
@@ -975,6 +975,31 @@ paths:
                     description: Unauthorized
                 "500":
                     description: Insernal Server Error
+    /role/delete:
+        delete:
+            tags:
+                - RolesCRUD
+            summary: Soft Delete Role by id.
+            operationId: SoftDeleteRoleById
+            parameters:
+                - x-go-name: Body
+                  name: body
+                  in: body
+                  schema:
+                    $ref: '#/definitions/SoftDeleteRoleByIdRequest'
+            responses:
+                "200":
+                    $ref: '#/responses/SoftDeleteRoleByIdResponse'
+                "401":
+                    description: Unauthorized
+                "403":
+                    description: Forbidden
+                "404":
+                    description: Not Found
+                "500":
+                    description: Internal Server Error
+            security:
+                - bearer: []
     /roles:
         get:
             tags:
@@ -1015,6 +1040,21 @@ paths:
                     description: Forbidden
                 "404":
                     description: Not Found
+                "500":
+                    description: Internal Server Error
+            security:
+                - bearer: []
+    /roles/permission-counts:
+        get:
+            tags:
+                - RolesCRUD
+            summary: Get permission counts for all roles.
+            operationId: GetRolesPermissionCounts
+            responses:
+                "200":
+                    $ref: '#/responses/GetRolesPermissionCountResponse'
+                "401":
+                    description: Unauthorized
                 "500":
                     description: Internal Server Error
             security:
@@ -2354,6 +2394,19 @@ definitions:
                     $ref: '#/definitions/UserRoleDao'
                 x-go-name: UserRoles
         x-go-package: github.com/babbage88/go-infra/api/user_api_handlers
+    GetRolesPermissionCountResponse:
+        type: object
+        properties:
+            error:
+                type: string
+                x-go-name: Error
+                x-go-type: error
+            rolePermissionCounts:
+                type: array
+                items:
+                    $ref: '#/definitions/RolePermissionCount'
+                x-go-name: RolePermissionCounts
+        x-go-package: github.com/babbage88/go-infra/api/user_api_handlers
     GetUserByIdResponse:
         type: object
         properties:
@@ -2663,6 +2716,21 @@ definitions:
                 type: string
                 x-go-name: TargetHostName
         x-go-package: github.com/babbage88/go-infra/services/node_networking
+    RolePermissionCount:
+        type: object
+        properties:
+            permissionCount:
+                type: integer
+                format: int64
+                x-go-name: PermissionCount
+            roleId:
+                type: string
+                format: uuid
+                x-go-name: RoleId
+            roleName:
+                type: string
+                x-go-name: RoleName
+        x-go-package: github.com/babbage88/go-infra/api/user_api_handlers
     RolePermissionMappingDao:
         type: object
         properties:
@@ -2690,6 +2758,22 @@ definitions:
                 format: uuid
                 x-go-name: RoleId
         x-go-package: github.com/babbage88/go-infra/services/user_crud_svc
+    SoftDeleteRoleByIdRequest:
+        type: object
+        properties:
+            targetRoleId:
+                type: string
+                format: uuid
+                x-go-name: TargetRoleId
+        x-go-package: github.com/babbage88/go-infra/api/user_api_handlers
+    SoftDeleteRoleByIdResponse:
+        type: object
+        properties:
+            error:
+                type: string
+                x-go-name: Error
+                x-go-type: error
+        x-go-package: github.com/babbage88/go-infra/api/user_api_handlers
     SoftDeleteUserByIdRequest:
         type: object
         properties:
@@ -3099,32 +3183,14 @@ definitions:
     UserRoleDao:
         type: object
         properties:
-            createdAt:
+            error:
                 type: string
-                format: date-time
-                x-go-name: CreatedAt
-            enabled:
-                type: boolean
-                x-go-name: Enabled
-            id:
-                type: string
-                format: uuid
-                x-go-name: Id
-            isDeleted:
-                type: boolean
-                x-go-name: IsDeleted
-            lastModified:
-                type: string
-                format: date-time
-                x-go-name: LastModified
-            roleDesc:
-                type: string
-                x-go-name: RoleDescription
-            roleName:
-                type: string
-                x-go-name: RoleName
+                x-go-name: Error
+                x-go-type: error
+            newUserRoleInfo:
+                $ref: '#/definitions/UserRoleDao'
         x-go-name: CreateUserRoleResponse
-        x-go-package: github.com/babbage88/go-infra/services/user_crud_svc
+        x-go-package: github.com/babbage88/go-infra/api/user_api_handlers
     UserSecretEntry:
         type: object
         properties:
@@ -3296,6 +3362,10 @@ responses:
                 name:
                     type: string
                     x-go-name: Name
+    GetRolesPermissionCountResponse:
+        description: (empty)
+        schema:
+            $ref: '#/definitions/GetRolesPermissionCountResponse'
     GetSshKeyHostMappingByIdResponse:
         description: (empty)
         schema:
@@ -3394,6 +3464,10 @@ responses:
                     type: string
                     format: uuid
                     x-go-name: UserID
+    SoftDeleteRoleByIdResponse:
+        description: (empty)
+        schema:
+            $ref: '#/definitions/SoftDeleteRoleByIdResponse'
     SoftDeleteUserByIdResponse:
         description: (empty)
         schema:
